--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,453 @@
 ﻿<div data-options="dxView : { name: 'home', title: 'Home' } " >
     <div class="index-view"  data-options="dxContent : { targetPlaceholder: 'content' } " >
+    
+    <div id="main-column">
+    <!-- hero -->
+        
+    
+        
+    <section id="main-content" class="vert-divider-6">
+        <div id="content" class="grid-6">
+            <input type="hidden" name="objBody$content_0$pagecontent_0$hItemPath" id="objBody_content_0_pagecontent_0_hItemPath" value="{B913760A-3F02-4F81-B7B9-A28C5E7801E3}" />
+<h1>Winning Numbers</h1>
+<h2>Check your tickets to see if you’ve won. </h2>
+<!-- AddThis Button BEGIN -->
+<div class="static">
+    
+<div class="addthis_toolbox addthis_default_style ">
+<p>Share:</p>
+<a class="addthis_button_email"></a>
+<a class="addthis_button_facebook"></a>
+<a class="addthis_button_twitter"></a>
+</div>
+<script type="text/javascript">    var addthis_config = { data_use_flash: false, data_use_cookies: false, data_ga_property: 'UA-576767-1', data_track_clickback: true };</script>
+<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4dc1ddff3f68cab5"></script>
+
+</div>
+<!-- AddThis Button END -->
+
+<div id="draw-games">
+    <div class="box">
+        <!-- Winning-Numbers -->
+        <ul class="draw_games show_win_num clearfix">
+            
+                    <li class="clearfix">
+                        <a href="/play/draw-games/powerball/Winning-Numbers/">
+                            <img src="http://static.sc-www.calottery.com/~/media/Play/draw_games/Powerball/powerball_logo_landing_page.png" alt="logo for landing image" width="118" height="57" />
+                        </a>
+                        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="info">
+        <p>
+            <a href="/play/draw-games/powerball/winning-numbers" class="see-all">
+                 See All &raquo;
+            </a>
+        </p>
+        <p>
+            Wednesday, May 21 | Winning Numbers | Draw #117
+        </p>
+        <ul class="winning_number">
+            <li><span>4</span></li><li><span>20</span></li><li><span>34</span></li><li><span>39</span></li><li><span>58</span></li><li class='bullseye'><span>31</span></li>
+        </ul>
+    </div>
+
+
+
+
+                    </li>
+                
+                    <li class="clearfix">
+                        <a href="/play/draw-games/mega-millions/Winning-Numbers/">
+                            <img src="http://static.sc-www.calottery.com/~/media/Play/draw_games/Mega-Millions/megamillions_landing_page_logo.png" alt="logo for landing image" width="118" height="57" />
+                        </a>
+                        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="info">
+        <p>
+            <a href="/play/draw-games/mega-millions/winning-numbers" class="see-all">
+                 See All &raquo;
+            </a>
+        </p>
+        <p>
+            Tuesday, May 20 | Winning Numbers | Draw #930
+        </p>
+        <ul class="winning_number">
+            <li><span>10</span></li><li><span>40</span></li><li><span>63</span></li><li><span>64</span></li><li><span>69</span></li><li class='mega'><span>7</span></li>
+        </ul>
+    </div>
+
+
+
+
+                    </li>
+                
+                    <li class="clearfix">
+                        <a href="/play/draw-games/superlotto-plus/Winning-Numbers/">
+                            <img src="http://static.sc-www.calottery.com/~/media/Play/draw_games/SuperLotto-Plus/superlottoplus-jackpot.png" alt="SuperLotto Plus" width="116" height="67" />
+                        </a>
+                        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="info">
+        <p>
+            <a href="/play/draw-games/superlotto-plus/winning-numbers" class="see-all">
+                 See All &raquo;
+            </a>
+        </p>
+        <p>
+            Wednesday, May 21 | Winning Numbers | Draw #2831
+        </p>
+        <ul class="winning_number">
+            <li><span>6</span></li><li><span>12</span></li><li><span>36</span></li><li><span>39</span></li><li><span>44</span></li><li class='mega'><span>2</span></li>
+        </ul>
+    </div>
+
+
+
+
+                    </li>
+                
+                    <li class="clearfix">
+                        <a href="/play/draw-games/fantasy-5/Winning-Numbers/">
+                            <img src="http://static.sc-www.calottery.com/~/media/Play/draw_games/Fantasy-5/fantasy-5-jackpot.png" alt="Fantasy 5" width="116" height="67" />
+                        </a>
+                        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="info">
+        <p>
+            <a href="/play/draw-games/fantasy-5/winning-numbers" class="see-all">
+                 See All &raquo;
+            </a>
+        </p>
+        <p>
+            Thursday, May 22 | Winning Numbers | Draw #7502
+        </p>
+        <ul class="winning_number">
+            <li><span>2</span></li><li><span>9</span></li><li><span>16</span></li><li><span>25</span></li><li><span>32</span></li>
+        </ul>
+    </div>
+
+
+
+
+                    </li>
+                
+                    <li class="clearfix">
+                        <a href="/play/draw-games/daily-4/Winning-Numbers/">
+                            <img src="http://static.sc-www.calottery.com/~/media/Play/draw_games/Daily-4/daily-4-jackpot.png" alt="Daily 4" width="116" height="67" />
+                        </a>
+                        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="info">
+        <p>
+            <a href="/play/draw-games/daily-4/winning-numbers" class="see-all">
+                 See All &raquo;
+            </a>
+        </p>
+        <p>
+            Thursday, May 22 | Winning Numbers | Draw #2195
+        </p>
+        <ul class="winning_number">
+            <li><span>4</span></li><li><span>8</span></li><li><span>9</span></li><li><span>2</span></li>
+        </ul>
+    </div>
+
+
+
+
+                    </li>
+                
+                    <li class="clearfix">
+                        <a href="/play/draw-games/daily-3/Winning-Numbers/">
+                            <img src="http://static.sc-www.calottery.com/~/media/Play/draw_games/Daily-3/daily-3-jackpot.png" alt="Daily 3" width="116" height="67" />
+                        </a>
+                        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="info daily-3">
+        <p>
+            <a href="/play/draw-games/daily-3/winning-numbers" class="see-all">
+                   See All &raquo;
+            </a>
+        </p>
+        <div class="half-left">
+            <p class="center">
+                Thursday, May 22<br />
+                Winning Numbers<br />
+                Midday | Draw #12292
+            </p>
+            <ul class="winning_number">
+                <li><span>4</span></li><li><span>1</span></li><li><span>4</span></li>
+            </ul>
+        </div>
+        <div class="half-right">
+            <p class="center">
+                Thursday, May 22<br />
+                Winning Numbers<br />
+                Evening | Draw #12293
+            </p>
+            <ul class="winning_number">
+                <li><span>5</span></li><li><span>1</span></li><li><span>4</span></li>
+            </ul>
+        </div>
+    </div>
+
+
+
+                    </li>
+                
+                    <li class="clearfix">
+                        <a href="/play/draw-games/daily-derby/Winning-Numbers/">
+                            <img src="http://static.sc-www.calottery.com/~/media/Play/draw_games/Daily-Derby/daily-derby-jackpot.png" alt="Daily Derby" width="116" height="67" />
+                        </a>
+                        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="info daily-derby">
+        <p>
+            <a href="/play/draw-games/daily-derby/winning-numbers" class="see-all">
+                See All &raquo;
+            </a>
+            Thursday, May 22 | Winning Results | Draw #5967
+        </p>
+        <dl><dt>1st</dt><dd>07 - EUREKA</dd><dt>2nd</dt><dd>02 - LUCKY STAR</dd><dt>3rd</dt><dd>01 - GOLD RUSH</dd><dd class='race-time'><strong>Race Time:</strong> 1:44.43</dd></dl>
+    </div>
+
+
+                    </li>
+                
+                    <li class="clearfix">
+                        <a href="/play/draw-games/hot-spot/">
+                            <img src="http://static.sc-www.calottery.com/~/media/Play/draw_games/Hot-Spot/hot-spot-bullseye-jackpot.png" alt="Hot Spot" width="116" height="67" />
+                        </a>
+                        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="info">
+        <p>
+            <a href="/play/draw-games/hot-spot/draw-results" class="see-all">
+                 See All &raquo;
+            </a>
+        </p>
+        <h3>
+            With More Chances to Win<br />
+            Every 4 Minutes!
+        </h3>         
+        <h4>
+            
+        </h4>        
+        <p class="hot-spot-retailer">
+            <a href="/play/draw-games/hot-spot/?hs=True&amp;lk=False"><span>Go to Hot Spot &raquo;</span></a>
+        </p>
+    </div>
+
+                    </li>
+                
+        </ul>
+        <p class="disclaimer">
+          *Estimated
+           |
+           **Guaranteed
+           <br />
+           
+        </p>
+    </div>
+</div>
+<h3>I won! Now what?</h3>
+<p><a href="/win/claiming-prizes" title="Find out how to claim your prize">Find out how to claim your prize &raquo;</a></p>
+        </div>
+        <!--
+
+        RIGHT COLUMN
+
+        -->
+        <aside id="right-column">
+			
+
+<div class="no-pad">
+    <a href="/play/whats-my-game">
+	    <img src="http://static.sc-www.calottery.com/~/media/module-graphics/feeling-lucky-rhm.png" alt="Feeling Lucky Today?" width="220" height="93" />
+    </a>
+	<p>See which game might give you that winning feeling.</p>
+	<p><a href="/play/whats-my-game">Find your game &raquo;</a></p>
+</div>
+
+
+
+<div class="no-pad">    
+    <h3>
+        News Releases
+    </h3>
+    <dl class="news">
+        
+                <dt>
+                    May 22 2014
+                    
+                    </dt>
+                <dd>
+                    Last-Second Purchase Leads to $1.2 Million Win <br />
+                    <a href="/Media/Press-Releases/Press-Release?Item={930612E4-F60F-4C2F-8952-9AA5049E2D7D}">More &raquo;</a>
+                </dd>
+            
+                <dt>
+                    May 21 2014
+                    
+                    </dt>
+                <dd>
+                    Notice of Public Meeting<br />
+                    <a href="/Media/Press-Releases/Press-Release?Item={D66E3229-5FBE-4484-9C0F-4E0E1C27A821}">More &raquo;</a>
+                </dd>
+            
+                <dt>
+                    May 21 2014
+                    
+                    </dt>
+                <dd>
+                    $175,000 Winning Fantasy 5 Ticket Sold in San Jose! <br />
+                    <a href="/Media/Press-Releases/Press-Release?Item={415AE0E8-92AC-4283-B08C-0FCBC6F5629F}">More &raquo;</a>
+                </dd>
+            
+    </dl>
+</div>
+<input type="hidden" name="objBody$content_0$ctl10$hItemPath" id="objBody_content_0_ctl10_hItemPath" value="{8DCB7280-EFD8-4D4B-9F8A-302FCEF8EEBD}" />
+		</aside>
+    </section>     
+</div>
+
+    
+    
+    
+    
         <p>To learn more about PhoneJS, visit <a href="http://phonejs.devexpress.com">http://phonejs.devexpress.com</a>, where you can find documentation, feature demonstrations, and various tutorials.</p>
         <p>If you have any questions about PhoneJS, do not hesitate to contact our support team via <a href="http://www.devexpress.com/support/center/">http://www.devexpress.com/support/center/</a>.</p>
     </div>
